# neco-crates

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README-ja.md  README.md  SECURITY.md
neco-argon2/: Cargo.toml  README-ja.md  README.md
neco-argon2/src/: argon2id.rs  blake2b.rs  lib.rs
neco-argon2/tests/: interop.rs
neco-argparse/: Cargo.toml  README-ja.md  README.md
neco-argparse/src/: args.rs  cli.rs  error.rs  lib.rs  parsed.rs  validate.rs
neco-array2/: Cargo.toml  README-ja.md  README.md
neco-array2/src/: lib.rs
neco-base58/: Cargo.toml  README-ja.md  README.md
neco-base58/src/: decode.rs  encode.rs  error.rs  lib.rs
neco-base58/tests/: integration.rs
neco-base64/: Cargo.toml  README-ja.md  README.md
neco-base64/src/: decode.rs  encode.rs  error.rs  lib.rs
neco-base64/tests/: integration.rs
neco-brep/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-brep/src/: bezier.rs  bezier_decompose.rs  brep.rs  extrude.rs  lib.rs  loft.rs  mesh_validate.rs  primitives.rs  radians.rs  revolve.rs  shell_view.rs  stl.rs  sweep.rs  tessellate.rs  transform.rs  types.rs  vec3.rs
neco-brep/src/boolean/: classify.rs  combine.rs  intersect.rs  mod.rs
neco-brep/src/boolean3d/: classify3d.rs  combine3d.rs  intersect3d.rs  mod.rs  nurbs_intersect.rs  sweep_intersect.rs  tet_clip.rs  tolerance.rs
neco-brep/tests/: boolean3d_tests.rs  boolean_tessellation.rs  boolean_tests.rs  boolean_trim_tests.rs  loft_smooth.rs  nurbs_intersection_tests.rs  revolve_eval.rs  surface_intersection_degenerate.rs  sweep_boolean.rs
neco-car/: Cargo.toml  README-ja.md  README.md
neco-car/src/: error.rs  lib.rs  parse.rs  types.rs  write.rs
neco-car/tests/: integration.rs
neco-cbor/: Cargo.toml  README-ja.md  README.md
neco-cbor/src/: cid_tag.rs  decode.rs  encode.rs  error.rs  json_bridge.rs  lib.rs  value.rs
neco-cbor/tests/: integration.rs  interop.rs
neco-cdt/: Cargo.toml  LICENSE-APACHE  MATH-ja.md  README-ja.md  README.md
neco-cdt/benches/: build_random_points.rs
neco-cdt/src/: cdt.rs  lib.rs  predicates.rs  robust_impl.rs
neco-cid/: Cargo.toml  README-ja.md  README.md
neco-cid/src/: cbor.rs  lib.rs
neco-cid/tests/: cbor.rs  integration.rs
neco-color/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-color/benches/: gamma_bench.rs
neco-color/src/: cct.rs  gamma.rs  hsl.rs  lib.rs
neco-complex/: Cargo.toml  README-ja.md  README.md
neco-complex/src/: lib.rs
neco-contact/: Cargo.toml  README-ja.md  README.md
neco-contact/src/: lib.rs
neco-contact/tests/: contact.rs
neco-dop853/: Cargo.toml  README-ja.md  README.md
neco-dop853/src/: lib.rs
neco-ecc/: Cargo.toml  README-ja.md  README.md
neco-ecc/src/: bm.rs  decoder.rs  encoder.rs  lib.rs  syndrome.rs
neco-edge-routing/: Cargo.toml  README-ja.md  README.md
neco-edge-routing-wasm/: Cargo.toml  README-ja.md  README.md
neco-edge-routing-wasm/src/: lib.rs
neco-edge-routing/src/: bezier.rs  error.rs  lib.rs  linear.rs  nurbs.rs  orthogonal.rs  spline.rs
neco-edge-routing/tests/: feature_disabled.rs  feature_enabled.rs  route_api.rs
neco-eigensolve/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-eigensolve/src/: c64.rs  cms.rs  dense.rs  dense_block.rs  ic0.rs  lib.rs  lobpcg.rs  rng.rs  spmv.rs
neco-eigensolve/src/chefsi/: cpu_backend.rs  filter.rs  mod.rs  rayleigh_ritz.rs  spectrum.rs
neco-eigensolve/src/feast/: backend.rs  complex_csr.rs  complex_ilu0.rs  contour.rs  direct_lu.rs  gmres.rs  internal_lu.rs  mod.rs
neco-filetree/: Cargo.toml
neco-fuzzy/: CHANGELOG.md  Cargo.toml  README-ja.md  README.md
neco-fuzzy/benches/: fuzzy_bench.rs
neco-fuzzy/src/: boundary.rs  candidate.rs  config.rs  corpus.rs  dp.rs  encode.rs  lib.rs  top_k.rs
neco-fuzzy/tests/: energy_api.rs
neco-galois/: Cargo.toml  README-ja.md  README.md
neco-galois/src/: bigint.rs  fp.rs  lib.rs  p256.rs  rfc6979.rs  secp256k1.rs
neco-gf256/: Cargo.toml  README-ja.md  README.md
neco-gf256/src/: lib.rs  poly.rs  tables.rs
neco-gridfield/: Cargo.toml  README-ja.md  README.md
neco-gridfield/src/: field.rs  grid.rs  lib.rs
neco-gridfield/tests/: gridfield.rs
neco-json/: Cargo.toml  README-ja.md  README.md
neco-kdl/: Cargo.toml  README-ja.md  README.md
neco-kdl/src/: comment.rs  convert.rs  lib.rs  normalize.rs  number.rs  parse.rs  scan.rs  string.rs  value.rs
neco-kdl/tests/: suite.rs
neco-kmeans/: Cargo.toml  README-ja.md  README.md
neco-kmeans/benches/: kmeans_bench.rs
neco-kmeans/src/: kmeans.rs  lib.rs
neco-mesh/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-mesh/src/: immersed.rs  internal_mesh3d.rs  lib.rs  mesh1d.rs  mesh2d.rs  point3.rs  predicates.rs  types.rs
neco-mesh/src/mesh3d/: improvement.rs  insertion.rs  mod.rs  plc.rs  quality.rs  recovery.rs  refinement.rs  tet_mesh.rs
neco-mesh/src/voxel/: grid.rs  mod.rs  solid.rs  surface.rs  wire.rs
neco-mesh/tests/: voxel.rs
neco-minphase/: Cargo.toml  README-ja.md  README.md
neco-minphase/src/: lib.rs
neco-modal/: Cargo.toml  README-ja.md  README.md
neco-modal/src/: fft_backend.rs  lib.rs  oscillator.rs  response.rs
neco-modal/tests/: modal.rs
neco-nodegraph/: Cargo.toml  README-ja.md  README.md
neco-nodegraph/src/: edge.rs  error.rs  graph.rs  id.rs  json.rs  lib.rs  node.rs  port.rs
neco-nodegraph/tests/: integration.rs
neco-nostr-wasm/: Cargo.toml  README-ja.md  README.md
neco-nurbs/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-p256/: Cargo.toml  README-ja.md  README.md
neco-pathrel/: Cargo.toml
neco-pigment/: Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-radiation/: Cargo.toml  README-ja.md  README.md
neco-rand/: Cargo.toml  README-ja.md  README.md
neco-secp/: Cargo.toml  README-ja.md  README.md
neco-sha1/: Cargo.toml  README-ja.md  README.md
neco-sha2/: Cargo.toml  README-ja.md  README.md
neco-sparse/: Cargo.toml  README-ja.md  README.md
neco-spectral/: Cargo.toml  README-ja.md  README.md
neco-spline/: CHANGELOG.md  Cargo.toml  MATH-ja.md  README-ja.md  README.md
neco-stencil/: Cargo.toml  README-ja.md  README.md
(+108 files in other folders)
