[workspace]
members = [
    "neco-array2",
    "neco-complex",
    "neco-fuzzy",
    "neco-rand",
    "neco-secp",
    "neco-p256",
    "neco-vault",
    "neco-nostr-wasm",
    "neco-gridfield",
    "neco-contact",
    "neco-stft",
    "neco-minphase",
    "neco-sparse",
    "neco-eigensolve",
    "neco-kmeans",
    "neco-cdt",
    "neco-nurbs",
    "neco-stl",
    "neco-mesh",
    "neco-spectral",
    "neco-spline",
    "neco-color",
    "neco-view2d",
    "neco-pigment",
    "neco-brep",
    "neco-view2d-wasm",
    "neco-radiation",
    "neco-dop853",
    "neco-stencil",
    "neco-modal",
    "neco-json",
    "neco-cbor",
    "neco-cid",
    "neco-car",
    "neco-tree",
    "neco-tui",
    "neco-kdl",
    "neco-base58",
    "neco-base64",
    "neco-argparse",
    "neco-sha2",
]
exclude = [
    "demos/cli",
]
default-members = [
    "neco-array2",
    "neco-complex",
    "neco-fuzzy",
    "neco-rand",
    "neco-secp",
    "neco-p256",
    "neco-vault",
    "neco-gridfield",
    "neco-contact",
    "neco-stft",
    "neco-minphase",
    "neco-sparse",
    "neco-eigensolve",
    "neco-kmeans",
    "neco-cdt",
    "neco-nurbs",
    "neco-stl",
    "neco-mesh",
    "neco-spectral",
    "neco-spline",
    "neco-color",
    "neco-view2d",
    "neco-pigment",
    "neco-brep",
    "neco-radiation",
    "neco-dop853",
    "neco-stencil",
    "neco-modal",
    "neco-json",
    "neco-cbor",
    "neco-cid",
    "neco-car",
    "neco-tree",
    "neco-tui",
    "neco-kdl",
    "neco-base58",
    "neco-base64",
    "neco-argparse",
    "neco-sha2",
]
resolver = "2"
