[workspace]
members = [
    "neco-argon2",
    "neco-argparse",
    "neco-array2",
    "neco-base58",
    "neco-base64",
    "neco-brep",
    "neco-car",
    "neco-cbor",
    "neco-cdt",
    "neco-cid",
    "neco-color",
    "neco-complex",
    "neco-contact",
    "neco-dop853",
    "neco-eigensolve",
    "neco-fuzzy",
    "neco-galois",
    "neco-gridfield",
    "neco-json",
    "neco-kdl",
    "neco-kmeans",
    "neco-mesh",
    "neco-minphase",
    "neco-modal",
    "neco-nostr-wasm",
    "neco-nurbs",
    "neco-p256",
    "neco-pigment",
    "neco-radiation",
    "neco-rand",
    "neco-secp",
    "neco-sha2",
    "neco-sparse",
    "neco-spectral",
    "neco-spline",
    "neco-stencil",
    "neco-stft",
    "neco-stl",
    "neco-tree",
    "neco-tui",
    "neco-vault",
    "neco-view2d",
    "neco-view2d-wasm",
]
exclude = [
    "demos/cli",
]

resolver = "2"
