[package]
name = "neco-array2"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Lightweight row-major 2D array foundation for grid-oriented crates"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-array2"
keywords = ["array", "grid", "buffer", "row-major", "matrix"]
categories = ["mathematics", "science", "algorithms"]
exclude = ["workspace.kdl"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
