[package]
name = "neco-base58"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Zero-dependency Base58BTC encoder and decoder"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-base58"
keywords = ["base58", "base58btc", "encoding", "bitcoin"]
categories = ["encoding"]

[dependencies]
