[package]
name = "neco-cbor"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "zero dependency CBOR / DAG-CBOR codec for no_std environments"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-cbor"
keywords = ["cbor", "dag-cbor", "ipld", "no-std", "codec"]
categories = ["encoding", "no-std", "parser-implementations"]
exclude = ["tests/atproto-interop"]

[dependencies]

[dev-dependencies]
neco-json = { path = "../neco-json" }
neco-cid = { path = "../neco-cid" }
