[package]
name = "neco-cid"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Minimal CIDv1 and multibase core"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-cid"
keywords = ["cid", "ipld", "multibase", "multihash"]
categories = ["encoding", "parser-implementations"]

[dependencies]
sha2 = "0.10"

[lib]
path = "src/lib.rs"
