[package]
name = "neco-cid"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "necosystems series CIDv1 and multibase core"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-cid"
keywords = ["cid", "ipld", "multibase", "multihash"]
categories = ["encoding", "parser-implementations"]

[dependencies]
neco-sha2 = { path = "../neco-sha2", version = "0.1" }

[lib]
path = "src/lib.rs"
