[package]
name = "neco-contact"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Hertz contact and spatial helpers on uniform 2D fields"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-contact"
keywords = ["contact", "hertz", "grid", "simulation", "acoustics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
neco-array2 = { version = "0.1", path = "../neco-array2" }
