[package]
name = "neco-edge-routing"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "necosystems series 2D edge routing primitives for node graphs"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-edge-routing"
keywords = ["routing", "bezier", "graph", "node-editor", "geometry"]
categories = ["graphics", "mathematics"]

[lib]
path = "src/lib.rs"

[features]
default = []
spline = ["dep:neco-spline"]
nurbs = ["dep:neco-nurbs"]

[dependencies]
neco-spline = { path = "../neco-spline", version = "0.2.0", optional = true }
neco-nurbs = { path = "../neco-nurbs", version = "0.1", optional = true }
