[package]
name = "neco-eigensolve"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Lightweight solvers for generalized eigenvalue problems"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-eigensolve"
keywords = ["eigenvalue", "sparse", "solver", "numerics", "lobpcg"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = ["parallel"]
parallel = ["rayon"]
faer-lu = ["dep:faer"]

[dependencies]
neco-sparse = { version = "0.1", path = "../neco-sparse" }
rayon = { version = "1", optional = true }
faer = { version = "0.24", default-features = false, features = ["std", "sparse-linalg"], optional = true }

[lib]
path = "src/lib.rs"
