[package]
name = "neco-galois"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Finite field arithmetic for secp256k1 and P-256"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
keywords = ["galois", "finite-field", "montgomery", "secp256k1", "p256"]
categories = ["cryptography"]

[dependencies]
neco-sha2 = { path = "../neco-sha2", version = "0.1" }
