[package]
name = "neco-modal"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Modal extraction utilities for time-series vibration data"
repository = "https://github.com/barineco/neco-crates"
readme = "README.md"
documentation = "https://docs.rs/neco-modal"
keywords = ["modal", "fft", "signal", "vibration", "analysis"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]
neco-stft = { version = "0.1", path = "../neco-stft" }
